micronaut-port/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hostinfo-micronaut
  labels:
    name: hostinfo-micronaut
